Added Jackson serialization in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8080
 jwt.secret=my-super-secret-key-1234567890-very-long
 jwt.expiration-ms=3600000
 
+spring.jackson.serialization.INDENT_OUTPUT=true
+
 #spring.web.cors.allowed-origins=http://localhost:5500
 #spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 #spring.web.cors.allowed-headers=*
