--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/trackspense
-server.port=8080
-jwt.secret=my-super-secret-key-1234567890-very-long
+spring.data.mongodb.uri=${MONGODB_URI}
+jwt.secret=${JWT_SECRET}
 jwt.expiration-ms=3600000
 
+server.port=${PORT:8080}
 spring.jackson.serialization.INDENT_OUTPUT=true
-
-#spring.web.cors.allowed-origins=http://localhost:5500
-#spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-#spring.web.cors.allowed-headers=*
-#spring.web.cors.allow-credentials=true
